# proof-of-inference

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.client.json  tsconfig.json
app/: .env.example  Dockerfile  fly.toml  index.html  package-lock.json  package.json  start-dev.sh  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: client.ts  idl.json  idl.ts  index.ts  mxe_idl.json  proof_of_inference.ts  types.ts
app/src/frontend/: App.tsx  WalletProvider.tsx  index.css  solanaEnv.ts  vite-env.d.ts
app/src/frontend/components/: ConnectWalletGate.tsx  ErrorBoundary.tsx  RegisterModelPanel.tsx  RunInferencePanel.tsx  VerifyComparePanel.tsx
app/src/frontend/hooks/: useDecryptedMpcOutputs.ts  useDemoState.ts  useOnChainInferences.ts  useOnChainModels.ts  useProgram.ts
app/src/frontend/lib/: arciumInference.ts  inferenceDecryptStorage.ts  modelWeights.ts  mpcOutputDecrypt.ts
confidential/: Cargo.toml
confidential/src/: lib.rs
mxe/poi_mxe/: .gitignore  Anchor.toml  Arcium.toml  README.md  package-lock.json  rust-toolchain.toml
mxe/poi_mxe/encrypted-ixs/src/: lib.rs
mxe/poi_mxe/programs/poi_mxe_scaffold/: Cargo.toml
mxe/poi_mxe/programs/poi_mxe_scaffold/src/: lib.rs
mxe/poi_mxe/scripts/: init-comp-def.ts
mxe/poi_mxe/tests/: poi_mxe_scaffold.ts
programs/poi-consumer/: Cargo.toml
programs/poi-consumer/src/: lib.rs
programs/proof-of-inference/: Cargo.toml  build.rs
programs/proof-of-inference/src/: lib.rs
scripts/: devnet-callback.js  devnet-setup.js  fetch-user-inferences.cjs  package-lock.json  package.json  sync-mxe-idl.cjs  watch-inference-requested.cjs
tests/: poi-consumer.ts  proof-of-inference.ts
tests/fixtures/: arcium_callback_authority.json
