[package]
name = "proof-of-inference-circuit"
version = "0.1.0"
description = "Arcis confidential inference circuit for Proof of Inference"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
# When building with the Arcis toolchain, enable this feature to compile the
# encrypted circuit module. Without it, we compile the plaintext reference code.
arcis = []

[dependencies]
# Match `arcis` from `arcium init` encrypted-ixs (CLI 0.9.7).
arcis = "0.9.7"
# `blake3` is a direct dep of `encrypted-ixs` in the template; keeps arcis toolchain happy.
blake3 = "=1.8.2"
# Plaintext reference tests (no Arcis).
sha2 = "0.10.9"
